--- a/Style.css
+++ b/Style.css
@@ -6,11 +6,14 @@ body{
     margin: 0px;
     padding: 0px;
 }
+header{
+    background-color: #f5f5f5;
+}
 #A2{
     margin-left: 50px;
 }
 #AA{
-    margin-left: 900px;
+    margin-left: 700px;
 }
 #A1{
     display: flex;color:#000A47;
@@ -32,6 +35,15 @@ nav{
 }
 .A4{
     margin-left: 100px;
+}
+#nos{
+    background-color: #f5f5f5;
+}
+#expert{
+    display: flex;
+}
+.idem{
+    font-size: 30px;
 }
 /*footer*/
 #footer{
@@ -70,6 +82,7 @@ footer{
 }
 #gestion2{
     width:500px;
+    height: 225px;
     background-color: grey;
     text-align: justify;
     margin-left:400px;
@@ -87,6 +100,7 @@ footer{
     background-color: #000A47;
     padding: 20px;
     color: white;
+    padding-top: 50px;
 }
 .B2{
     margin-left:50px ;
@@ -97,8 +111,33 @@ footer{
 .B4{
     margin-left: 375px;
 }
+.yao{
+    margin: 25px;
+}
 .bruno:hover{
     width:200px;
     height: 200px;
 }
-/*Nos services*/
+#back{
+    background-color: #f5f5f5;
+}
+.centre{
+    text-align: center;
+}
+/* Fin nos services*/
+/*portfolio*/
+#ptf{
+    font-size: 25px;
+    text-align: center;
+    padding: 50px;
+}
+#para{
+    width:300px
+}
+#pop{
+    background-color: grey;
+    width:500px;
+}
+#para:hover{
+    color: white;
+}
